--- a/luncheons.html
+++ b/luncheons.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>San Joaquin Valley Town Hall</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="styles" href="main.css">
 </head>
 <body>
     <header>
