--- a/luncheons.html
+++ b/luncheons.html
@@ -1,60 +1,152 @@
-<!DOCTYPE html>
+
+<IDOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>San Joaquin Valley Town Hall</title>
-    <link rel="styles" href="main.css">
+
+<meta charset="utf-8">
+
+<title>San Joaquin Valley Town Hall</title>
+
+<link rel="shortcut icon" href="images/favicon.ico">
+
 </head>
+
 <body>
-    <header>
-        <img src="logo.gif" alt="Town Hall logo" height="80">
-        <hgroup>
-            <h1>San Joaquin Valley Town Hall</h1>
-            <h2>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h2>
-        </hgroup>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Speakers</a></li>
-            <li><a class="current" href="#">Luncheons</a></li>
-            <li><a href="#">Tickets</a></li>
-            <li><a href="#">About Us</a></li>
-        </ul>
-    </nav>
-    <section>
-        <h1>About Our Luncheons</h1>
-        <p>Make reservations for lunch in the lower lobby of the William Saroyan Theater after each lecture. These informal sessions provide an excellent opportunity to talk with the speaker.</p>
-        <h2>Season luncheon tickets: $120</h2>
-        <p>These tickets can be ordered at the same time as the season lecture ticket.</p>
-        <h2>Individual luncheon tickets: $25</h2>
-        <p>A limited number of these tickets are available and can be purchased by calling 559.555.1212. These tickets must be purchased by the Friday prior to the lecture.</p>
-        <figure>
-            <figcaption><h2 id="luncheon_heading">The luncheon schedule</h2></figcaption>
-            <table>
-                <thead>
-                    <tr>
-                        <th id="hdr_year" scope="col">Year</th>
-                        <th id="hdr_date" scope="col">Date</th>
-                        <th id="hdr_speaker" scope="col">Speaker</th>
-                        <th id="hdr_cost" scope="col">Cost</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Table rows go here -->
-                </tbody>
-                <tfoot>
-                    <!-- Table footer goes here -->
-                </tfoot>
-            </table>
-        </figure>
-    </section>
-    <aside>
-        <h1 id="speakers">2011-2012 Speakers</h1>
-        <!-- Speaker information goes here -->
-    </aside>
-    <footer>
-        <p>© 2012, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
-    </footer>
+
+<header>
+
+<img src="images/logo.jpg" alt="Town Hall Logo" width="50">
+
+<h2>San Joaquin Valley Town Hall</h2>
+
+<h3>Celebrating our 75<sup>th</sup> Year</h3>
+
+</header>
+
+<main>
+
+<!-- According to requirement no 6 h2 tags for our mission and our ticket packages -->
+
+<h2>Our Mission</h2>
+
+<!-- According to requirement no 7 -->
+
+<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring
+
+nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
+
+<blockquote>&quot;Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge... and that is priceless.&quot;</blockquote>
+
+<h2>Our Ticket Packages</h2>
+
+<!-- According to requirement no 8 ul tags were written -->
+
+<ul>
+
+<!-- According to requirement no 8 ul and li tags were written -->
+
+<li>Season Package: $95</li>
+
+<li>Patron Package: $200</li>
+
+<li>Single Speakers: $25</li>
+
+</ul>
+
+<!-- According to requirement no 6 h1 tag for heading this seasons guest speakers -->
+
+<h1>This season's guest speakers</h1>
+
+<!-- According to requirement no 9 month and speaker name are separated with <br> tag -->
+
+<h3>October<br>
+
+<!-- According to requirement no 11 speaker name is enclosed in <a> tag -->
+
+<a href="speakers/toobin.html">Jeffrey Toobin</a>
+
+</h3>
+
+<!-- According to requirement no 12 images are enclosed in <img> tag and filenames are specified with alt also -->
+
+<img src="images/toobin75.jpg" alt="Jeffrey Toobin" width="75">
+
+<h3>November<br>
+
+<!-- According to requirement no 11 speaker name is enclosed in <a> tag -->
+
+<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
+
+</h3>
+
+<!-- According to requirement no 12 images are enclosed in <img> tag and filenames are specified with alt also -->
+
+<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin" width="75">
+
+<h3>January<br>
+
+<!-- According to requirement no 11 speaker name is enclosed in <a> tag -->
+
+<a href="speakers/chua.html">Amy Chua</a>
+
+</h3>
+
+<!-- According to requirement no 12 images are enclosed in <img> tag and filenames are specified with alt also -->
+
+<img src="images/chua75.jpg" alt="Amy Chua" width="75">
+
+<h3>February<br>
+
+<!-- According to requirement no 11 speaker name is enclosed in <a> tag -->
+
+<a href="speakers/sampson.html">Scott Sampson</a>
+
+</h3>
+
+<!-- According to requirement no 12 images are enclosed in <img> tag and filenames are specified with alt also -->
+
+<img src="images/sampson75.jpg" alt="Scott Sampson" width="75">
+
+<h3>March<br>
+
+<!-- According to requirement no 11 speaker name is enclosed in <a> tag -->
+
+<a href="speakers/eire.html">Carlos Eire</a>
+
+</h3>
+
+<!-- According to requirement no 12 images are enclosed in <img> tag and filenames are specified with alt also -->
+
+<img src="images/eire75.jpg" alt="Carlos Eire" width="75">
+
+<h3>April<br>
+
+<!-- According to requirement no 11 speaker name is enclosed in <a> tag -->
+
+<a href="speakers/tynan.html">Ronan Tynan</a>
+
+</h3>
+
+<!-- According to requirement no 12 images are enclosed in <img> tag and filenames are specified with alt also -->
+
+<img src="images/tynan75.jpg" alt="Ronan Tynan" width="75">
+
+<p><em>Contact us by phone</em>at(559)555-1212for ticket
+
+information.</p>
+
+</main>
+
+<footer>
+
+<!-- According to requirement no 13 the footer of the html is enclosed in <p> tag inside the <footer> tag -->
+
+<p>&copy;Copyright 2018 San Joaquin Valley Town Hall.</p>
+
+</footer>
+
 </body>
+
 </html>
